--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,12 @@
     <string name="app_name">switfy-companion</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="first_fragment_label">Search Student</string>
+    <string name="second_fragment_label">Student Info</string>
+    <string name="search">Search</string>
+    <string name="back">Back</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="textView_login">Login</string>
+    <string name="editText_login">student</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
