--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,9 @@
     <string name="textView_skills">Skills</string>
     <string name="textView_skill">Skill</string>
     <string name="textView_project">Project</string>
+    <string name="textView_settings_dark_mode">Dark mode</string>
     <!-- EditTexts -->
     <string name="editText_login">student</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
